fixed z-index on the header so scrolling works properly

--- a/index.css
+++ b/index.css
@@ -34,13 +34,16 @@ html {
   size: 1500px;
   font-size: 90px;
   margin-top: 40px;
+  z-index: 1;
 }
 
 .sub {
   color: white;
   font-size: 25px;
+  z-index: 1;
 }
 
 button {
   text-align: center;
+  z-index: 1;
 }
