--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ html {
   background-image: url('images/header-bg.png');
   position: fixed;
   top: 0;
-  width: 100%
+  width: 100%;
+  z-index: 2;
 }
 
 li {
